      mongoc_database_drop_with_opts
    Write concern behavior is unchanged for regular CRUD functions.
  * Setting a negative writeConcern level of -2 or smaller, via the "opts"
    parameter to functions that accept BSON options, is now prohibited. The
    special "w" values -2 through -4 are only used internally. The deprecated
    "w=-1" is still allowed, as a synonym for "w=0".


mongo-c-driver 1.9.0
====================

It is my pleasure to announce mongo-c-driver 1.9.0. This version drops support
for MongoDB 2.4 and adds support for MongoDB 3.6 features:

  * New struct mongoc_change_stream_t to watch a collection for changes.
  * New struct mongoc_client_session_t represents a MongoDB 3.6 session,
    which supports causal consistency: you are guaranteed to read your writes
    and to perform monotonic reads, even when reading from secondaries or in
    a sharded cluster.
  * New functions that accept flexible options as a BSON document. These
    accept a "sessionId" option and any future options. In addition, the
    two new "update" functions accept the "arrayFilters" option that is new
    in MongoDB 3.6:
      mongoc_collection_insert_one
      mongoc_collection_insert_many
      mongoc_collection_update_one
      mongoc_collection_update_many
      mongoc_collection_replace_one
      mongoc_collection_delete_one
      mongoc_collection_delete_many
      mongoc_client_command_with_opts
      mongoc_database_command_with_opts
      mongoc_collection_command_with_opts
      mongoc_client_find_databases_with_opts
      mongoc_client_get_database_names_with_opts
      mongoc_collection_create_bulk_operation_with_opts
      mongoc_collection_find_indexes_with_opts
      mongoc_database_find_collections_with_opts
      mongoc_database_get_collection_names_with_opts
  * New URI option "retryWrites=true" safely and automatically retries certain
    write operations if the server is a MongoDB 3.6 replica set or sharded
    cluster.