@@ -31,6 +31,8 @@ bugfixes:
     parameter to functions that accept BSON options, is now prohibited. The
     special "w" values -2 through -4 are only used internally. The deprecated
     "w=-1" is still allowed, as a synonym for "w=0".
+  * The Kerberos URI option authMechanismProperties=CANONICALIZE_HOST_NAME:true
+    is now implemented with the Windows Kerberos provider, SSPI.
 
 
 mongo-c-driver 1.9.0
